Fixing color contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -161,7 +161,7 @@ footer{
     font-family: var(--font);
     font-weight: light;
     font-style: italic;
-    background-color: rgb(204, 74, 96);
+    background-color: rgb(201, 72, 93);
     color: white;
     font-size: 1.05rem;
     margin-top: 1rem;
